# uda-xarray

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: test_backend.py
uda_xarray/: main.py
xuda/: main.py
