[project]
name = "xuda"
version = "0.1.0"
description = "xarray interface for UDA"
readme = "README.md"
requires-python = ">=3.11, <3.13"
authors = [
]
maintainers = [
    {name = "Samuel Jackson", email = "samuel.jackson@ukaea.uk"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "uda>=2.9.2",
    "xarray>=2025.12.0",
]

[tool.setuptools]
packages = ["xuda"]

[project.urls]
repository = "https://github.com/samueljackson92/tokamak-events"

[tool.ruff]
exclude = []

[dependency-groups]
dev = [
    "pylint>=4.0.4",
    "pytest>=8.4.1",
    "ruff>=0.14.10",
]

[project.entry-points."xarray.backends"]
uda = "xuda.main:UDABackendEntrypoint"
